--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,14 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+//关于在CodeRunner中乱码问题的解决：
+//确保VScode其默认编码格式为utf8，如下所示
+//况且OUTPUT默认也为utf8,因此可以正常显示中文
+"files.encoding": "utf8",
+"code-runner.runInTerminal": false,
+"code-runner.executorMap": {
+    "python": "set PYTHONIOENCODING=utf8 && python",
+    "java": "cd $dir && javac -encoding utf8 $fileName && java -Dfile.encoding=UTF-8 $fileNameWithoutExt",
+},
 }
