--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,32 +4,58 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-     {
-      "name": "gcc.exe - 生成和调试活动文件",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-      //"program": "cmd",
-      "args": [
-        "/C",
-        "${fileDirname}\\${fileBasenameNoExtension}.exe",
-        "&",
-        "pause"
+      {
+        "type": "java",
+        "name": "Launch demo2",
+        "request": "launch",
+        "mainClass": "demo2",
+        "projectName": "leetcode_787e2dde"
+      },
+      {
+        "type": "java",
+        "name": "Launch Main",
+        "request": "launch",
+        "mainClass": "Main",
+        "projectName": "leetcode_787e2dde"
+      },
+      {
+        "type": "java",
+        "name": "Launch App",
+        "request": "launch",
+        "mainClass": "App",
+        "projectName": "leetcode_787e2dde"
+      },
+      {
+        "type": "java",
+        "name": "Debug (Launch) - Current File",
+        "request": "launch",
+        "mainClass": "${file}"
+      },
+      {
+        "name": "gcc.exe - 生成和调试活动文件",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+        "args": [
+          "/C",
+          "${fileDirname}\\${fileBasenameNoExtension}.exe",
+          "&",
+          "pause"
         ],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": true, //控制台输出,false则不显示终端窗口
-      "MIMode": "gdb",
-      "miDebuggerPath": "D:\\software\\CodeBlocks\\MinGW\\bin\\gdb.exe", //修改成你自己的路径
-      "setupCommands": [
-       {
-        "description": "为 gdb 启用整齐打印",
-        "text": "-enable-pretty-printing",
-        "ignoreFailures": true
-       }
-      ],
-      "preLaunchTask": "gcc.exe build active file"//该处一定要与tasks.json的lable一致
-     }
+        "stopAtEntry": false,
+        "cwd": "${workspaceFolder}",
+        "environment": [],
+        "externalConsole": true,
+        "MIMode": "gdb",
+        "miDebuggerPath": "D:\\software\\CodeBlocks\\MinGW\\bin\\gdb.exe",
+        "setupCommands": [
+          {
+            "description": "为 gdb 启用整齐打印",
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": true
+          }
+        ],
+        "preLaunchTask": "gcc.exe build active file"
+      }
     ]
    }
