--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
       {
         "type": "java",
+        "name": "Launch Main",
+        "request": "launch",
+        "mainClass": "problems.Main",
+        "projectName": "leetcode_787e2dde"
+      },
+      {
+        "type": "java",
         "name": "Launch demo2",
         "request": "launch",
         "mainClass": "demo2",
